--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,376 +1,207 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: "Georgia";
     font-size: 16px;
-    font-family: 'Lato', sans-serif;
-    background-color: ghostwhite;
+    color: rgb(255, 255, 255);
+    user-select: none;
+    background: url('../assets/bg (3).jpg') no-repeat;
+    background-size: 100%;
 }
 
-.header {
-    position: absolute;
-    width: 100%;
-    background-color: ghostwhite;
-    /*padding: 10px 0 10px 0;*/
-    border-bottom: 1px solid #c0c0c0;
-    letter-spacing: 3px;
-}
-
-.header-content {
-    display: flex;
-    justify-content: space-between;
-}
-
-.logo {
-    padding-left: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.menu {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+header {
     display: flex;
     align-items: center;
-    line-height: 30px;
-}
-
-.menu-item a {
-    text-decoration: none;
-    color: #000000;
-    padding: 10px;
-}
-
-.menu-item a:hover {
-    font-size: 105%;
-}
-
-@media screen and (max-width: 580px) and (min-width: 375px) {
-    .menu-item a {
-        font-size: 10px;
-        padding: 5px;
-    }
-    .menu-item a:hover {
-        font-size: 101%;
-    }
-}
-
-.content {
-    margin: 0 100px 0 100px;
-    font-size: 20px;
-}
-
-@media screen and (max-width: 580px) and (min-width: 375px) {
-    .content {
-        font-size: 15px;
-    }
-}
-
-@media screen and (max-width: 580px) and (min-width: 375px) {
-    .content {
-        margin: 0 50px 0 50px;
-    }
-}
-
-.logoContent {
-    background-image: url('../assets/background.png');
-
-    max-width: 1470px;
-    margin-left: auto;
-    margin-right: auto;
-    height: 600px;
-    width: 100%;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-@media screen and (max-width: 580px) and (min-width: 375px) {
-    .logoContent {
-        height: 50vh;
-    }
-}
-
-.logoContent p{
-    font-size: 32px;
-}
-
-.frameLogo {
-    border-style: solid;
-    border-width: 2px;
-    height: 40px;
-    width: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 32px;
-    margin-right: 5px;
-}
-
-.title {
-    font-size: 32px;
-    font-weight: bold;
-}
-
-@media screen and (max-width: 580px) and (min-width: 375px) {
-    .frameLogo {
-        font-size: 20px;
-        height: 30px;
-        width: 45px;
-    }
-    .logoContent p {
-        font-size: 20px;
-    }
-    .title {
-        font-size: 25px;
-    }
-}
-
-.projects {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.proiect {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.proiect div:hover {
-    transform: scale(1.05);
-}
-
-.proiect1 {
-    height: 250px;
-    width: 400px;
-    background-image: url('../assets/house2.jpg');
-    background-size: 100%;
-    display: flex;
-    margin: 0 15px 15px 0;
-}
-.proiect2 {
-    height: 250px;
-    width: 400px;
-    background-image: url('../assets/house3.jpg');
-    background-size: 100%;
-    display: flex;
-    margin: 0 15px 15px 0;
-}
-.proiect3 {
-    height: 250px;
-    width: 400px;
-    background-image: url('../assets/house4.jpg');
-    background-size: 100%;
-    display: flex;
-    margin: 0 15px 15px 0;
-}
-.proiect4 {
-    height: 250px;
-    width: 400px;
-    background-image: url('../assets/house5.jpg');
-    background-size: 100%;
-    display: flex;
-    margin: 0 15px 15px 0;
-}
-.proiect5 {
-    height: 250px;
-    width: 400px;
-    background-image: url('../assets/house3.jpg');
-    background-size: 100%;
-    display: flex;
-    margin: 0 15px 15px 0;
-}
-.proiect6 {
-    height: 250px;
-    width: 400px;
-    background-image: url('../assets/house2.jpg');
-    background-size: 100%;
-    display: flex;
-    margin: 0 15px 15px 0;
-}
-.proiect7 {
-    height: 250px;
-    width: 400px;
-    background-image: url('../assets/house5.jpg');
-    background-size: 100%;
-    display: flex;
-    margin: 0 15px 15px 0;
-}
-.proiect8 {
-    height: 250px;
-    width: 400px;
-    background-image: url('../assets/house2.jpg');
-    background-size: 100%;
-    display: flex;
-    margin: 0 15px 15px 0;
-}
-
-@media screen and (max-width: 580px) and (min-width: 375px) {
-    .proiect1 {
-        height: 200px;
-        width: 275px;
-    }
-    .proiect2 {
-        height: 200px;
-        width: 275px;
-    }
-    .proiect3 {
-        height: 200px;
-        width: 275px;
-    }
-    .proiect4 {
-        height: 200px;
-        width: 275px;
-    }
-    .proiect5 {
-        height: 200px;
-        width: 275px;
-    }
-    .proiect6 {
-        height: 200px;
-        width: 275px;
-    }
-    .proiect7 {
-        height: 200px;
-        width: 275px;
-    }
-    .proiect8 {
-        height: 200px;
-        width: 275px;
-    }
-}
-
-.textProject {
-    background-color: black;
-    color: aliceblue;
-    position: absolute;
-    display: block;
-    text-align: center;
-    width: 220px;
-    height: 30px;
-}
-
-.textAbout {
-    font-size: 15px;
-}
-
-.aboutTeam {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.aboutTeam div{
-    /*height: 500px;*/
-    width: 20%;
-}
-
-.aboutTeam img {
-    width: 100%;
-}
-
-.name {
-    font-size: 32px;
-    font-weight: bold;
-    margin-top: 2px;
-    margin-bottom: 2px;
-}
-
-.position {
-    font-size: 18px;
-    font-weight: bold;
-    color: darkgray;
-}
-
-@media screen and (max-width: 580px) and (min-width: 375px) {
-    .name {
-        font-size: 25px;
-    }
-    .position {
-        font-size: 15px;
-    }
-}
-
-.contact {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 15px;
-    color: aliceblue;
-    background-color: black;
-    height: 30px;
-}
-
-@media screen and (max-width: 580px) and (min-width: 375px) {
-    .contact {
-        font-size: 12px;
-    }
-}
-
-input[type=text] {
-    width: 100%;
-    height: 20px;
-    background-color: ghostwhite;
-    border: 0;
-    border-bottom: 1px solid #000;
-    outline: 0;
-}
-
-input[type=button] {
-    width: 200px;
-    height: 25px;
-    color: aliceblue;
-    background-color: black;
-    margin-top: 20px;
-}
-
-.map {
-    padding-top: 30px;
-}
-
-.footer {
-    height: 150px;
-    background-color: black;
-    color: ghostwhite;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    letter-spacing: 5px;
-}
-
-@media screen and (max-width: 580px) and (min-width: 375px) {
-    .footer {
-        height: 100px;
-    }
-}
-
-.buttonUp {
-    position: fixed;
-    right: 45px;
-    bottom: 45px;
-    height: 50px;
-    width: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    color: white;
+    padding: 20px 150px;
+    height: 85px;
+    border-top: 2px solid rgb(118, 195, 143);
     background-color: dimgray;
     opacity: 0.7;
-    font-family: 'Lato', sans-serif;
-    border-radius: 50%;
 }
 
-@media screen and (max-width: 580px) and (min-width: 375px) {
-    .buttonUp {
-        right: 3px;
-        bottom: 15px;
-        height: 40px;
-        width: 40px;
-        font-size: 12px;
+.logo a {
+    font-size: 28px;
+    color: rgb(255, 255, 255);
+    line-height: 1;
+    text-decoration: none;
+}
+
+.logo p{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.under-logo {
+    font-size: 11px;
+    color: rgb(151, 151, 151);
+    line-height: 1;
+}
+
+.body-max {
+    max-width: 100%;
+    margin-left: auto;
+}
+
+.navigation-bar {
+    display: flex;
+    justify-content: space-between;
+}
+
+.navigation-list {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    font-size: 13px;
+    line-height: 1.2;
+}
+
+@media (max-width: 450px) {
+    .navigation-list {
+        display: none;
     }
 }
+
+.navigation-bar a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    padding: 10px 20px 10px 20px;
+    border-radius: 15px;
+}
+
+.navigation-bar a:hover {
+    background-color: rgb(118, 195, 143);
+}
+
+.slider {
+    height: 520px;
+    background-color: dimgray;
+    opacity: 0.7;
+    padding: 0 10% 0 10%;
+}
+
+.my-slider {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.my-slider div{
+    padding-right: 10%;
+    flex-basis: 40%;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.text-slider {
+    margin-top: 3%;
+}
+
+.title-text-slider {
+    font-size: 46px;
+    margin-bottom: 0;
+}
+
+.main-text-slider {
+    font-size: 15px;
+}
+
+.text-slider p{
+    justify-content: center;
+    align-items: center;
+}
+
+.img-slider {
+    width: 380px;
+    height: 380px;
+}
+
+.img-slider img{
+    min-width: auto;
+    min-height: auto;
+    height: 100%;
+    border: 25px solid rgb(51, 51, 51);
+    border-radius: 210px;
+}
+
+.button-read {
+    background-color: rgb(118, 195, 143);
+    border-radius: 10px;
+    border-style: none;
+    text-align: center;
+    font-size: 13px;
+    color: rgb(255, 255, 255);
+    height: 35px;
+    width: 145px;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -200px;
+    padding: 16px;
+    color: rgb(118, 195, 143);
+    font-weight: bold;
+    font-size: 50px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+}
+
+.next {
+    right: 20%;
+    border-radius: 3px 0 0 3px;
+}
+
+.row-services {
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.services img{
+    height: 120px;
+    width: 120px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.service {
+    height: 310px;
+    width: 230px;
+    margin: 40px 10px;
+    box-sizing: border-box;
+    position: relative;
+    background-color: ghostwhite;
+
+    text-align: center;
+    padding-top: 10px;
+}
+
+.service p{
+    color: black;
+}
+
+.title-service {
+    font-size: 32px;
+    margin: 0;
+}
+
+.row-services div:hover {
+    background-color: rgb(118, 195, 143);
+}
+
+.service:hover p{
+    color: ghostwhite;
+}
+
+.service:hover img{
+    filter: invert(100%);
+}
+
+
+
