--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,8 +5,8 @@ body {
     font-size: 16px;
     color: rgb(255, 255, 255);
     user-select: none;
-    background: url('../assets/bg (3).jpg') no-repeat;
-    background-size: 100%;
+    background: url('../assets/bg (5).jpg') no-repeat;
+    background-size: cover;
 }
 
 header {
@@ -105,6 +105,7 @@ header {
 
 .main-text-slider {
     font-size: 15px;
+    color: rgb(151, 151, 151);
 }
 
 .text-slider p{
@@ -139,7 +140,7 @@ header {
 .prev, .next {
     cursor: pointer;
     position: absolute;
-    top: 50%;
+    top: 55%;
     width: auto;
     margin-top: -200px;
     padding: 16px;
@@ -151,8 +152,15 @@ header {
 }
 
 .next {
-    right: 20%;
+    right: 15%;
     border-radius: 3px 0 0 3px;
+}
+
+.services {
+    /*display: flex;*/
+    /*justify-content: center;*/
+    /*flex-wrap: wrap;*/
+    margin: 0 100px 0 100px;
 }
 
 .row-services {
@@ -177,18 +185,18 @@ header {
     box-sizing: border-box;
     position: relative;
     background-color: ghostwhite;
-
     text-align: center;
     padding-top: 10px;
-}
-
-.service p{
-    color: black;
 }
 
 .title-service {
     font-size: 32px;
     margin: 0;
+    color: dimgray;
+}
+
+.main-text-service {
+    color: rgb(151, 151, 151);
 }
 
 .row-services div:hover {
@@ -203,5 +211,87 @@ header {
     filter: invert(100%);
 }
 
+/**/
+
+.latest-work{
+    margin: 0 100px 0 100px;
+}
+
+.title-latest-work {
+    overflow: hidden;
+    text-align: center;
+}
 
 
+.title-latest-work a {
+    display: inline-block;
+    vertical-align: middle;
+    background-color: slategray;
+    border-radius: 10px;
+    padding: 5px;
+    font-size: 24px;
+}
+.title-latest-work:before,
+.title-latest-work:after {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    width: 100%;
+    height: 4px;
+    background-color: slategray;
+    position: relative;
+}
+.title-latest-work:before {
+    margin-left: -100%;
+}
+
+.title-latest-work:after {
+    margin-right: -100%;
+}
+
+.row-latest-work {
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.latest {
+    margin: 20px;
+    /*flex-basis: 20%;*/
+    box-sizing: border-box;
+    position: relative;
+    border: 5px solid rgb(255, 255, 255);
+    height: 200px;
+    width: 300px;
+}
+
+.latest img {
+    width: 100%;
+    height: 100%;
+    filter: grayscale(100%);
+}
+
+.latest-description{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    text-align: center;
+    padding: 2% 0;
+    font-size: 14px;
+    width: 100%;
+    bottom: 0;
+}
+
+.latest:hover{
+    border-color: rgb(118, 195, 143);
+}
+
+.latest:hover img{
+    filter: grayscale(0%);
+}
+
+.latest:hover div{
+    display: none;
+}
