--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,10 +9,16 @@ body {
     background-size: cover;
 }
 
+.max-wigth {
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
 header {
+    padding-left: 10%;
+    padding-right: 10%;
     display: flex;
     align-items: center;
-    padding: 20px 150px;
     height: 85px;
     border-top: 2px solid rgb(118, 195, 143);
     background-color: dimgray;
@@ -78,7 +84,7 @@ header {
     height: 520px;
     background-color: dimgray;
     opacity: 0.7;
-    padding: 0 10% 0 10%;
+    /*padding: 0 10% 0 10%;*/
 }
 
 .my-slider {
@@ -156,12 +162,7 @@ header {
     border-radius: 3px 0 0 3px;
 }
 
-.services {
-    /*display: flex;*/
-    /*justify-content: center;*/
-    /*flex-wrap: wrap;*/
-    margin: 0 100px 0 100px;
-}
+
 
 .row-services {
     padding-left: 10px;
@@ -213,10 +214,6 @@ header {
 
 /**/
 
-.latest-work{
-    margin: 0 100px 0 100px;
-}
-
 .title-latest-work {
     overflow: hidden;
     text-align: center;
@@ -226,7 +223,7 @@ header {
 .title-latest-work a {
     display: inline-block;
     vertical-align: middle;
-    background-color: slategray;
+    background-color: #2a2a2a;
     border-radius: 10px;
     padding: 5px;
     font-size: 24px;
@@ -238,7 +235,7 @@ header {
     vertical-align: middle;
     width: 100%;
     height: 4px;
-    background-color: slategray;
+    background-color: #2a2a2a;
     position: relative;
 }
 .title-latest-work:before {
@@ -295,3 +292,73 @@ header {
 .latest:hover div{
     display: none;
 }
+
+.about-us {
+    /*padding: 30px 200px 0 200px;*/
+    background-color: #313131;
+    height: 400px;
+}
+
+.row-about-us {
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.about {
+    box-sizing: border-box;
+    position: relative;
+    flex-basis: 25%;
+    padding: 0 50px 0 0;
+}
+
+
+/*/*/
+
+input[type=text], select, textarea {
+    width: 80%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    /*margin-top: 6px;*/
+    margin-bottom: 10px;
+    resize: vertical;
+    border-radius: 15px;
+    background-color: #222222;
+}
+
+input[type=submit] {
+    background-color: rgb(118, 195, 143);
+    color: rgb(151, 151, 151);
+    padding: 12px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 15px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column, input[type=submit] {
+        width: 100%;
+        margin-top: 0;
+    }
+}
+
+
+.footer {
+    background-color: #2b2b2b;
+    border-top: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    align-items: center;
+}
+
