--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,7 @@ body {
     background-size: cover;
 }
 
+
 .max-wigth {
     padding-left: 10%;
     padding-right: 10%;
@@ -26,14 +27,11 @@ header {
     background-color: rgba(43, 43, 43, 0.7);
 }
 
-.logo a {
+.logo-text{
     font-size: 28px;
     color: rgb(255, 255, 255);
     line-height: 1;
     text-decoration: none;
-}
-
-.logo p{
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -42,6 +40,8 @@ header {
     font-size: 11px;
     color: rgb(151, 151, 151);
     line-height: 1;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .body-max {
@@ -62,6 +62,10 @@ header {
     list-style-type: none;
     font-size: 13px;
     line-height: 1.2;
+}
+
+.navigation-list li{
+    text-transform: uppercase;
 }
 
 .navig-mini {
@@ -139,6 +143,13 @@ header {
         font-size: 13px;
         line-height: 36px;
         padding: 0 10px;
+        text-transform: uppercase;
+    }
+}
+
+@media (max-width: 450px){
+    .logo-text{
+        font-size: 20px;
     }
 }
 
@@ -168,15 +179,21 @@ header {
 
 .text-slider{
     box-sizing: border-box;
-    padding: 10px;
-    width: 50%;
+    /*padding: 10px;*/
+    /*width: 50%;*/
+    flex-basis: 50%;
     justify-content: center;
     align-items: center;
+    margin: 10px 0 10px 0;
 }
 
-.decription-slider {
-    padding: 0 5% 0 10%;
+.text-slider:first-child {
+    padding-right: 10%;
 }
+
+/*.decription-slider {*/
+/*    padding: 0 5% 0 10%;*/
+/*}*/
 
 .title-text-slider {
     font-size: 46px;
@@ -229,7 +246,7 @@ header {
 
 @media (max-width: 1100px) {
     .title-text-slider {
-        font-size: 30px;
+        font-size: 20px;
     }
 
     .main-text-slider {
@@ -244,7 +261,8 @@ header {
 @media (max-width: 650px) {
 
     .text-slider {
-        width: 100%;
+        /*width: 100%;*/
+        flex-basis: 100%;
         text-align: center;
     }
 
@@ -255,16 +273,18 @@ header {
     .round {
         justify-content: center;
     }
+
+    .text-slider:first-child {
+        padding-right: 0;
+    }
 }
 
 /*Service*/
 
 .row-services {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
-    margin-bottom: 10px;
-    margin-top: 60px;
+    margin: 30px -10px;
 }
 
 .services img{
@@ -274,24 +294,29 @@ header {
     margin-right: auto;
 }
 
-.service {
-    box-sizing: border-box;
+.service-item {
     background-color: ghostwhite;
+    padding: 40px 20px;
+    transition: background-color 0.5s linear;
+}
+
+.service {
+    flex-basis: 25%;
+    padding: 0 10px 20px 10px;
     text-align: center;
-    margin-bottom: 40px;
-    padding: 5px;
-    width: calc(1/4*100% - (1 - 1/4)*20px);
+    box-sizing: border-box;
 }
 
 @media (max-width: 1100px) {
     .service {
-        width: calc(1/2*100% - (1 - 1/2)*40px);
+        flex-basis: 50%;
     }
 }
 
 @media (max-width: 650px) {
     .service {
-        width: 100%;
+        /*width: 100%;*/
+        flex-basis: 100%;
     }
 
     .services img {
@@ -310,15 +335,15 @@ header {
     color: rgb(151, 151, 151);
 }
 
-.row-services div:hover {
+.service-item:hover {
     background-color: rgb(118, 195, 143);
 }
 
-.service:hover p{
+.service-item:hover p{
     color: ghostwhite;
 }
 
-.service:hover img{
+.service-item:hover img{
     filter: invert(100%);
 }
 
@@ -361,57 +386,67 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-bottom: 10px;
-    margin-top: 60px;
+    margin: 60px -10px;
 }
 
 .latest {
+    box-sizing: border-box;
+    flex-basis: 33.33333%;
+    padding: 0 10px;
+    margin-bottom: 20px;
+}
+
+.latest-item {
     border: 5px solid rgb(255, 255, 255);
     box-sizing: border-box;
-    background-color: ghostwhite;
-    text-align: center;
-    margin-bottom: 40px;
-    width: calc(1/3*100% - (1 - 1/3)*30px);
+    display: block;
+    width: 100%;
     position: relative;
 }
 
-.latest img {
+.latest-item img {
     width: 100%;
-    height: 100%;
+    display: block;
     filter: grayscale(100%);
+    transition: filter 0.8s linear;
 }
 
 .latest-description{
+    opacity: 1;
+    transition: opacity 0.2s ease-out;
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    text-align: center;
-    justify-content: center;
     width: 100%;
+    left: 0;
     bottom: 0;
+    font-size: 14px;
+    color: #fff;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 9px 0;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
-.latest:hover{
+.latest-item:hover{
     border-color: rgb(118, 195, 143);
 }
 
-.latest:hover img{
+.latest-item:hover img{
     filter: grayscale(0%);
 }
 
-.latest:hover div{
+.latest-item:hover div{
     display: none;
 }
 
 @media (max-width: 1100px) {
     .latest {
-        width: calc(1/2*100% - (1 - 1/2)*40px);
+        flex-basis: 50%;
     }
 }
 
 @media (max-width: 650px) {
     .latest {
-        width: 100%;
+        flex-basis: 100%;
     }
 }
 
@@ -427,13 +462,14 @@ header {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    margin: 0 -20px;
 }
 
 .about {
     box-sizing: border-box;
     position: relative;
-    padding: 0 30px 0 0;
-    width: 25%;
+    padding: 20px 20px;
+    flex-basis: 25%;
 }
 
 .title-about {
@@ -442,6 +478,7 @@ header {
 }
 
 .about-p {
+    text-decoration: none;
     color: rgb(118, 195, 143);
     font-size: 14px;
 }
@@ -495,7 +532,7 @@ header {
 
 @media (max-width: 1100px) {
     .about {
-        width: 50%;
+        flex-basis: 50%;
         padding-bottom: 5px;
         border-bottom: 1px solid black;
     }
@@ -511,7 +548,7 @@ header {
 @media (max-width: 650px) {
 
     .about {
-        width: 100%;
+        flex-basis: 100%;
     }
 
     .about:last-child{
@@ -525,6 +562,10 @@ header {
 
 /*/*/
 
+form{
+    box-sizing: border-box;
+}
+
 input[type=text], textarea {
     width: 100%;
     padding: 10px;
@@ -534,6 +575,7 @@ input[type=text], textarea {
     border-radius: 15px;
     background-color: #222222;
     font-family: "Georgia";
+
 }
 
 input[type=submit] {
@@ -573,11 +615,11 @@ input[type=submit] {
 }
 
 .copyright{
-    width: 50%;
+    flex-basis: 50%;
 }
 
 .template {
-    width: 50%;
+    flex-basis: 50%;
     text-align: right;
 }
 
